--- a/Project/css/PasswordReset.css
+++ b/Project/css/PasswordReset.css
@@ -8,8 +8,7 @@
 }
 
 body {
-    background-color: #5e3a02;
-    background: linear-gradient(to right, #f1b56f, #d6a56d);
+    background-color: #f2e2fa;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -24,13 +23,13 @@ body {
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    background-color: #5e3a02;
-    background: linear-gradient(to right, #5e3a02, #4c2a00);
+    position: absolute;
+    transform: translate(-50%, -50%);
+    background-color: #009df2;
     width: 500px;
     max-width: 100%;
     min-height: 500px;
     border-radius: 30px 5px;
-    position: absolute;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.514);
 }
 
@@ -44,9 +43,10 @@ body {
 /* Title */
 
 .container h1 {
-    color: #2cc226;
+    color: #ffe600;
     display: flex;
     transform: translateY(-50px);
+    font-size: 30px;
 }
 
 /* Input box */
@@ -54,12 +54,12 @@ body {
 .container .input-box {
     position: relative;
     width: 380px;
-    padding: 20px;
+    padding: 15px;
     margin: 8px;
     border: 0;
     border-radius: 10px;
     outline: none;
-    background-color: #7ec063;
+    background-color: #f2e2fa;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.35);
     transform: translateY(-15px);
 }
@@ -76,7 +76,7 @@ body {
 
 .container .input-box input::placeholder {
     font-style: italic;
-    color: #0042004d;
+    color: #ff9db7;
 }
 
 /* Input box icon */
@@ -86,26 +86,26 @@ body {
     left: 20px;
     top: 50%;
     transform: translateY(-5px);
-    color: #004200;
+    color: #ff9900;
 }
 
 /* Separator ("|") between icon and input box */
 
 .container .input-box p {
     position: absolute;
-    left: 55px;
+    left: 50px;
     top: 50%;
     transform: translateY(-10px);
     font-size: 14px;
-    color: #0042004d;
+    color: #ff9db7;
 }
 
 /* 'Continue' button */
 
 .container button {
     display: flex;
-    background-color: #7ec063;
-    color: #004200;
+    background-color: #fd3c70;
+    color: #ffe600;
     font-size: 15px;
     padding: 13px 40px;
     margin: 0;
