--- a/Project/css/passwordRecovery.css
+++ b/Project/css/passwordRecovery.css
@@ -8,8 +8,7 @@
 }
 
 body {
-    background-color: #f1b56f;
-    background: linear-gradient(to right, #f1b56f, #d6a56d);
+    background-color: #f2e2fa;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -24,14 +23,14 @@ body {
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    background-color: #5e3a02;
-    background: linear-gradient(to right, #5e3a02, #4c2a00);
+    position: absolute;
+    background-color: #009df2;
     width: 500px;
     max-width: 100%;
     min-height: 400px;
     border-radius: 30px 5px;
-    position: absolute;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.514);
+    transform: translate(-50%, -50%);
 }
 
 .container form {
@@ -44,17 +43,19 @@ body {
 /* Title */
 
 .container h1 {
-    color: #2cc226;
+    color: #ffe600;
     display: flex;
     transform: translateY(-30px);
+    font-size: 30px;
 }
 
 /* Subtitle */
 
 .container p {
-    color: #2cc226;
+    color: #ffe600;
     display: flex;
     transform: translateY(-20px);
+    font-size: 15px;
 }
 
 /* Input box */
@@ -62,12 +63,12 @@ body {
 .container .input-box {
     position: relative;
     width: 380px;
-    padding: 20px;
+    padding: 15px;
     margin: 8px;
     border: 0;
     border-radius: 10px;
     outline: none;
-    background-color: #7ec063;
+    background-color: #f2e2fa;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.685);
 }
 
@@ -83,7 +84,7 @@ body {
 
 .container input::placeholder {
     font-style: italic;
-    color: #0042006b;
+    color: #ff9db7;
 }
 
 /* Input box icon */
@@ -93,7 +94,7 @@ body {
     left: 20px;
     top: 50%;
     transform: translateY(-5px);
-    color: #004200;
+    color: #ff9900;
 }
 
 /* Separator ("|") between icon and input box */
@@ -104,15 +105,15 @@ body {
     top: 50%;
     transform: translateY(-10px);
     font-size: 14px;
-    color: #0042004d;
+    color: #ff9db7;
 }
 
 /* 'Reset Password' button */
 
 .container button {
     display: flex;
-    background-color: #7ec063;
-    color: #004200;
+    background-color: #fd3c70;
+    color: #ffe600;
     font-size: 15px;
     padding: 13px 50px;
     margin: 0;
