Color palette update | Bank View update

--- a/Project/css/PasswordReset.css
+++ b/Project/css/PasswordReset.css
@@ -25,7 +25,7 @@ body {
     flex-direction: column;
     position: absolute;
     transform: translate(-50%, -50%);
-    background-color: #009df2;
+    background-color: #410279;
     width: 500px;
     max-width: 100%;
     min-height: 500px;
@@ -43,7 +43,7 @@ body {
 /* Title */
 
 .container h1 {
-    color: #ffe600;
+    color: #fd3c70;
     display: flex;
     transform: translateY(-50px);
     font-size: 30px;
@@ -59,7 +59,7 @@ body {
     border: 0;
     border-radius: 10px;
     outline: none;
-    background-color: #f2e2fa;
+    background-color: #d0ffff;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.35);
     transform: translateY(-15px);
 }
@@ -76,7 +76,7 @@ body {
 
 .container .input-box input::placeholder {
     font-style: italic;
-    color: #ff9db7;
+    color: #cf94fd;
 }
 
 /* Input box icon */
@@ -86,7 +86,7 @@ body {
     left: 20px;
     top: 50%;
     transform: translateY(-5px);
-    color: #ff9900;
+    color: #410279;
 }
 
 /* Separator ("|") between icon and input box */
@@ -105,7 +105,7 @@ body {
 .container button {
     display: flex;
     background-color: #fd3c70;
-    color: #ffe600;
+    color: #410279;
     font-size: 15px;
     padding: 13px 40px;
     margin: 0;
