--- a/Project/css/passwordRecovery.css
+++ b/Project/css/passwordRecovery.css
@@ -24,7 +24,7 @@ body {
     justify-content: center;
     flex-direction: column;
     position: absolute;
-    background-color: #009df2;
+    background-color: #410279;
     width: 500px;
     max-width: 100%;
     min-height: 400px;
@@ -43,7 +43,7 @@ body {
 /* Title */
 
 .container h1 {
-    color: #ffe600;
+    color: #fd3c70;
     display: flex;
     transform: translateY(-30px);
     font-size: 30px;
@@ -52,7 +52,7 @@ body {
 /* Subtitle */
 
 .container p {
-    color: #ffe600;
+    color: #fd3c70;
     display: flex;
     transform: translateY(-20px);
     font-size: 15px;
@@ -68,7 +68,7 @@ body {
     border: 0;
     border-radius: 10px;
     outline: none;
-    background-color: #f2e2fa;
+    background-color: #d0ffff;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.685);
 }
 
@@ -84,7 +84,7 @@ body {
 
 .container input::placeholder {
     font-style: italic;
-    color: #ff9db7;
+    color: #cf94fd;
 }
 
 /* Input box icon */
@@ -94,7 +94,7 @@ body {
     left: 20px;
     top: 50%;
     transform: translateY(-5px);
-    color: #ff9900;
+    color: #410279;
 }
 
 /* Separator ("|") between icon and input box */
@@ -113,7 +113,7 @@ body {
 .container button {
     display: flex;
     background-color: #fd3c70;
-    color: #ffe600;
+    color: #410279;
     font-size: 15px;
     padding: 13px 50px;
     margin: 0;
