--- a/Project/css/styles.css
+++ b/Project/css/styles.css
@@ -23,7 +23,7 @@ body {
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    background-color: #009df2;
+    background-color: #410279;
     width: 500px;
     max-width: 100%;
     min-height: 550px;
@@ -45,7 +45,7 @@ body {
 /* Login title */
 
 .container .login-container h1 {
-    color: #ffe600;
+    color: #fd3c70;
     display: flex;
     transform: translateY(-60px);
     font-size: 35px;
@@ -61,7 +61,7 @@ body {
     border: 0;
     border-radius: 10px;
     outline: none;
-    background-color: #f2e2fa;
+    background-color: #d0ffff;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.788), inset 4px 0 0 rgb(253, 60, 112);
     transform: translateY(-15px);
 }
@@ -78,7 +78,7 @@ body {
 
 .container .login-container input::placeholder {
     font-style: italic;
-    color: #ff9db7;
+    color: #cf94fd;
 }
 
 /* Input box icons */
@@ -88,7 +88,7 @@ body {
     left: 20px;
     top: 50%;
     transform: translateY(-5px);
-    color: #ff9900;
+    color: #410279;
 }
 
 /* Separator ("|") between icon and input box */
@@ -120,7 +120,7 @@ body {
     margin: 0;
     vertical-align: middle;
     transform: translate(-10px, -2px);
-    accent-color: #ff9db7;
+    accent-color: #fd3c70;
 }
 
 /* 'Forgot Password?' Hyperlink */
@@ -136,7 +136,7 @@ body {
 .container .login-container button {
     display: flex;
     background-color: #fd3c70;
-    color: #ffe600;
+    color: #410279;
     font-size: 15px;
     padding: 13px 50px;
     margin: 0;
@@ -177,7 +177,7 @@ body {
 /* Right box title */
 
 .toggle-container h1 {
-    color: #ffee00;
+    color: #410279;
     text-align: center;
     font-size: 35px;
 }
@@ -186,14 +186,14 @@ body {
 
 .toggle-container p {
     transform: translateY(30%);
-    color: #ffe600;
+    color: #410279;
 }
 
 /* 'Sign Up' Button */
 
 .toggle-container button {
-    background-color: #009df2;
-    color: #ffff00;
+    background-color: #410279;
+    color: #00e1ff;
     transform: translate(55%, 100%);
     font-size: 15px;
     padding: 13px 50px;
