--- a/Project/css/bankView.css
+++ b/Project/css/bankView.css
@@ -1,5 +1,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
+:root {
+    --pink: #fd3c70;
+    --purple: #410279;
+    --lavanda: #cf94fd;
+    --cyan: #00e1ff;
+    --lightCyan: #d0ffff;
+    --palePink: #f2e2fa;
+    --paleTurquoise: #e2fcfc;
+    --lightRose: #ff9db7;
+}
+
 * {
     margin: 0;
     padding: 0;
@@ -8,7 +19,7 @@
 }
 
 body {
-    background-color: #f2e2fa;
+    background-color: var(--palePink);
     min-height: 100vh;
     overflow-x: hidden;
 }
@@ -18,7 +29,7 @@ header {
     left: 240px;
     width: 100%;
     height: 70px;
-    box-shadow: 0 0 10px #324044;
+    box-shadow: 0 0 10px rgb(50, 64, 68);
 }
 
 .topbar .toggle {
@@ -26,8 +37,12 @@ header {
 }
 
 .topbar i {
-    color: #410279;
+    color: var(--purple);
     font-size: 1.5rem;
+}
+
+.topbar .toggle i:hover {
+    color: var(--pink);
 }
 
 .topbar .header-functions {
@@ -45,7 +60,7 @@ header {
 
 .topbar .header-functions .notification-icon:hover i,
 .aboutUs-icon:hover i {
-    color: #fd3c70;
+    color: var(--pink);
 }
 
 .container {
@@ -57,8 +72,8 @@ header {
     position: fixed;
     width: 240px;
     height: 100%;
-    background: #d0ffff;
-    box-shadow: 0 0 10px #324044;
+    background: var(--lightCyan);
+    box-shadow: 0 0 10px rgb(50, 64, 68);
     transition: 0.5;
     overflow: hidden;
 }
@@ -95,7 +110,7 @@ header {
     display: block;
     width: 100%;
     text-decoration: none;
-    color: #410279;
+    color: var(--purple);
 }
 
 .navbar ul li a .icon {
@@ -118,7 +133,7 @@ header {
 }
 
 .navbar ul li a:hover {
-    color: #fd3c70;
+    color: var(--pink);
 }
 
 main {
@@ -139,13 +154,13 @@ section {
 }
 
 .dashboard-container .dashboard-title i {
-    color: #410279;
+    color: var(--purple);
     font-size: 18px;
     vertical-align: middle;
 }
 
 .dashboard-container .dashboard-title h3 {
-    color: #fd3c70;
+    color: var(--pink);
     font-size: 30px;
     margin-left: 10px;
 }
@@ -159,13 +174,13 @@ section nav ul {
 }
 
 section nav ul li a {
-    color: #410279;
+    color: var(--purple);
     text-decoration: none;
     font-size: 14px;
 }
 
 section nav ul li a:hover {
-    color: #fd3c70;
+    color: var(--pink);
 }
 
 section .dashboard-utilities {
@@ -176,11 +191,11 @@ section .dashboard-utilities {
 section .searchBar {
     display: flex;
     align-items: center;
-    background-color: #e2fcfc;
+    background-color: var(--paleTurquoise);
     width: 200px;
     height: 30px;
     border-radius: 10px;
-    border: 1px solid #3240443f;
+    border: 1px solid rgba(50, 64, 68, 0.247);
     margin-right: 40px;
 }
 
@@ -192,7 +207,7 @@ section .searchBar input {
 }
 
 section .searchBar input::placeholder {
-    color: #cf94fd;
+    color: var(--lavanda);
     font-style: italic;
 }
 
@@ -201,9 +216,9 @@ section .searchBar button {
     width: 70px;
     height: 30px;
     vertical-align: middle;
-    border: 1px solid #32404463;
-    color: #410279;
-    background-color: #d0ffff;
+    border: 1px solid rgba(50, 64, 68, 0.388);
+    color: var(--purple);
+    background-color: var(--lightCyan);
     cursor: pointer;
 }
 
@@ -215,24 +230,25 @@ section .dropdownMenu select {
     width: 200px;
     height: 30px;
     border-radius: 10px;
-    border: 1px solid #32404463;
-    color: #410279;
-    background-color: #e2fcfc;
+    border: 1px solid rgba(50, 64, 68, 0.388);
+    color: var(--purple);
+    background-color: var(--paleTurquoise);
     outline: none;
 }
 
 section .refreshButton button {
-    background-color: #410279;
-    color: #00e1ff;
+    background-color: var(--purple);
+    color: var(--cyan);
     font-size: 13px;
     border-radius: 16px;
     border: 0;
     width: 100px;
     height: 30px;
-    box-shadow: 0 0 10px #32404463;
+    box-shadow: 0 0 10px rgba(50, 64, 68, 0.388);
+    cursor: pointer;
     transition: 0.5s;
 }
 
 section .refreshButton button:hover {
-    box-shadow: 0 0 10px #00e1ff;
+    box-shadow: 0 0 10px var(--cyan);
 }
