--- a/Project/css/passwordRecovery.css
+++ b/Project/css/passwordRecovery.css
@@ -1,5 +1,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
+:root {
+    --pink: #fd3c70;
+    --purple: #410279;
+    --lavanda: #cf94fd;
+    --cyan: #00e1ff;
+    --lightCyan: #d0ffff;
+    --palePink: #f2e2fa;
+    --paleTurquoise: #e2fcfc;
+    --lightRose: #ff9db7;
+}
+
 * {
     margin: 0;
     padding: 0;
@@ -8,7 +19,7 @@
 }
 
 body {
-    background-color: #f2e2fa;
+    background-color: var(--palePink);
     display: flex;
     align-items: center;
     justify-content: center;
@@ -24,7 +35,7 @@ body {
     justify-content: center;
     flex-direction: column;
     position: absolute;
-    background-color: #410279;
+    background-color: var(--purple);
     width: 500px;
     max-width: 100%;
     min-height: 400px;
@@ -43,7 +54,7 @@ body {
 /* Title */
 
 .container h1 {
-    color: #fd3c70;
+    color: var(--pink);
     display: flex;
     transform: translateY(-30px);
     font-size: 30px;
@@ -52,7 +63,7 @@ body {
 /* Subtitle */
 
 .container p {
-    color: #fd3c70;
+    color: var(--pink);
     display: flex;
     transform: translateY(-20px);
     font-size: 15px;
@@ -68,7 +79,7 @@ body {
     border: 0;
     border-radius: 10px;
     outline: none;
-    background-color: #d0ffff;
+    background-color: var(--lightCyan);
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.685);
 }
 
@@ -84,7 +95,7 @@ body {
 
 .container input::placeholder {
     font-style: italic;
-    color: #cf94fd;
+    color: var(--lavanda);
 }
 
 /* Input box icon */
@@ -94,7 +105,7 @@ body {
     left: 20px;
     top: 50%;
     transform: translateY(-5px);
-    color: #410279;
+    color: var(--purple);
 }
 
 /* Separator ("|") between icon and input box */
@@ -105,15 +116,15 @@ body {
     top: 50%;
     transform: translateY(-10px);
     font-size: 14px;
-    color: #ff9db7;
+    color: var(--lightRose);
 }
 
 /* 'Reset Password' button */
 
 .container button {
     display: flex;
-    background-color: #fd3c70;
-    color: #410279;
+    background-color: var(--pink);
+    color: var(--pink);
     font-size: 15px;
     padding: 13px 50px;
     margin: 0;
