--- a/Project/css/styles.css
+++ b/Project/css/styles.css
@@ -1,5 +1,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
+:root {
+    --pink: #fd3c70;
+    --purple: #410279;
+    --lavanda: #cf94fd;
+    --cyan: #00e1ff;
+    --lightCyan: #d0ffff;
+    --palePink: #f2e2fa;
+    --paleTurquoise: #e2fcfc;
+    --lightRose: #ff9db7;
+}
+
 * {
     margin: 0;
     padding: 0;
@@ -8,7 +19,7 @@
 }
 
 body {
-    background-color: #f2e2fa;
+    background-color: var(--palePink);
     display: flex;
     align-items: center;
     justify-content: center;
@@ -23,7 +34,7 @@ body {
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    background-color: #410279;
+    background-color: var(--purple);
     width: 500px;
     max-width: 100%;
     min-height: 550px;
@@ -45,7 +56,7 @@ body {
 /* Login title */
 
 .container .login-container h1 {
-    color: #fd3c70;
+    color: var(--pink);
     display: flex;
     transform: translateY(-60px);
     font-size: 35px;
@@ -61,7 +72,7 @@ body {
     border: 0;
     border-radius: 10px;
     outline: none;
-    background-color: #d0ffff;
+    background-color: var(--lightCyan);
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.788), inset 4px 0 0 rgb(253, 60, 112);
     transform: translateY(-15px);
 }
@@ -78,7 +89,7 @@ body {
 
 .container .login-container input::placeholder {
     font-style: italic;
-    color: #cf94fd;
+    color: var(--lavanda);
 }
 
 /* Input box icons */
@@ -88,7 +99,7 @@ body {
     left: 20px;
     top: 50%;
     transform: translateY(-5px);
-    color: #410279;
+    color: var(--purple);
 }
 
 /* Separator ("|") between icon and input box */
@@ -99,7 +110,7 @@ body {
     top: 50%;
     transform: translateY(-10px);
     font-size: 14px;
-    color: #ff9db7;
+    color: var(--lightRose);
 }
 
 /* 'Remember Me' & 'Forgot Password?' wrapper */
@@ -107,7 +118,7 @@ body {
 .container .login-container .remember-forgot {
     vertical-align: middle;
     font-size: 14px;
-    color: #ff9db7;
+    color: var(--lightRose);
     position: relative;
     transform: translateY(12px);
 }
@@ -120,13 +131,13 @@ body {
     margin: 0;
     vertical-align: middle;
     transform: translate(-10px, -2px);
-    accent-color: #fd3c70;
+    accent-color: var(--pink);
 }
 
 /* 'Forgot Password?' Hyperlink */
 
 .container .login-container a {
-    color: #ff9db7;
+    color: var(--lightRose);
     font-size: 14px;
     margin-left: 97px;
 }
@@ -135,8 +146,8 @@ body {
 
 .container .login-container button {
     display: flex;
-    background-color: #fd3c70;
-    color: #410279;
+    background-color: var(--pink);
+    color: var(--purple);
     font-size: 15px;
     padding: 13px 50px;
     margin: 0;
@@ -161,7 +172,7 @@ body {
 /* Right box (Sign Up side) */
 
 .toggle-container {
-    background-color: #fd3c70;
+    background-color: var(--pink);
     width: 600px;
     max-width: 100%;
     min-height: 650px;
@@ -177,7 +188,7 @@ body {
 /* Right box title */
 
 .toggle-container h1 {
-    color: #410279;
+    color: var(--purple);
     text-align: center;
     font-size: 35px;
 }
@@ -186,14 +197,14 @@ body {
 
 .toggle-container p {
     transform: translateY(30%);
-    color: #410279;
+    color: var(--purple);
 }
 
 /* 'Sign Up' Button */
 
 .toggle-container button {
-    background-color: #410279;
-    color: #00e1ff;
+    background-color: var(--purple);
+    color: var(--cyan);
     transform: translate(55%, 100%);
     font-size: 15px;
     padding: 13px 50px;
