--- a/Project/views/bankView.html
+++ b/Project/views/bankView.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/png" href="../images/Empire Finance Network logos 2/Empire Finance Network-logos_transparent resized.png">
+    <link rel="icon" type="image/png" href="../images/Empire_Finance_Network_logos_2/Empire_Finance_Network-logos_transparent_resized.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <link rel="stylesheet" href="../css/bankView.css">
     <title>Banks - Empire Finance Network</title>
@@ -35,7 +35,7 @@
         <div class="container">
             <div class="navbar">
                 <div class="logo">
-                    <img src="../images/Empire Finance Network logos 4/Empire Finance Network-logos_transparent purple resized.png">
+                    <img src="../images/Empire_Finance_Network_logos_4/Empire_Finance_Network-logos_transparent_purple_resized.png">
                 </div>
 
                 <ul>
