--- a/Project/css/PasswordReset.css
+++ b/Project/css/PasswordReset.css
@@ -1,14 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 :root {
-    --pink: #fd3c70;
-    --purple: #410279;
-    --lavanda: #cf94fd;
-    --cyan: #00e1ff;
-    --lightCyan: #d0ffff;
-    --palePink: #f2e2fa;
-    --paleTurquoise: #e2fcfc;
-    --lightRose: #ff9db7;
+    --teal: #113946;
+    --tan: #BCA37F;
+    --brown: #3F2305;
+    --wheat: #DFD7BF;
+    --lightBeige: #f3e5c8;
+    --peach: #EAD7BB;
 }
 
 * {
@@ -19,7 +17,7 @@
 }
 
 body {
-    background-color: var(--palePink);
+    background-color: var(--lightBeige);
     display: flex;
     align-items: center;
     justify-content: center;
@@ -36,7 +34,7 @@ body {
     flex-direction: column;
     position: absolute;
     transform: translate(-50%, -50%);
-    background-color: var(--purple);
+    background-color: var(--tan);
     width: 500px;
     max-width: 100%;
     min-height: 500px;
@@ -54,7 +52,7 @@ body {
 /* Title */
 
 .container h1 {
-    color: var(--pink);
+    color: var(--brown);
     display: flex;
     transform: translateY(-50px);
     font-size: 30px;
@@ -70,7 +68,7 @@ body {
     border: 0;
     border-radius: 10px;
     outline: none;
-    background-color: var(--lightCyan);
+    background-color: var(--wheat);
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.35);
     transform: translateY(-15px);
 }
@@ -87,7 +85,7 @@ body {
 
 .container .input-box input::placeholder {
     font-style: italic;
-    color: var(--lavanda);
+    color: var(--tan);
 }
 
 /* Input box icon */
@@ -97,7 +95,7 @@ body {
     left: 20px;
     top: 50%;
     transform: translateY(-5px);
-    color: var(--purple);
+    color: var(--tan);
 }
 
 /* Separator ("|") between icon and input box */
@@ -108,15 +106,15 @@ body {
     top: 50%;
     transform: translateY(-10px);
     font-size: 14px;
-    color: var(--lightRose);
+    color: var(--tan);
 }
 
 /* 'Continue' button */
 
 .container button {
     display: flex;
-    background-color: var(--pink);
-    color: var(--purple);
+    background-color: var(--brown);
+    color: var(--peach);
     font-size: 15px;
     padding: 13px 40px;
     margin: 0;
