--- a/Project/views/listDashboards/bankList.html
+++ b/Project/views/listDashboards/bankList.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/png" href="../images/Empire_Finance_Network_logos_2/Empire_Finance_Network-logos_transparent_resized.png">
+    <link rel="icon" type="image/png" href="../../images/Empire_Finance_Network_logos_2/Empire_Finance_Network-logos_transparent_resized.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
-    <link rel="stylesheet" href="../css/bankView.css">
+    <link rel="stylesheet" href="../../css/viewsStyles/bankView.css">
     <title>Banks - Empire Finance Network</title>
 </head>
 <body>
@@ -17,9 +17,7 @@
 
             <div class="header-functions">
                 <div class="notification-icon">
-                    <a href="#">
-                        <i class="fa-regular fa-bell"></i>
-                    </a>
+                    <i class="fa-solid fa-moon"></i>
                 </div>
 
                 <div class="aboutUs-icon">
@@ -35,7 +33,7 @@
         <div class="container">
             <div class="navbar">
                 <div class="logo">
-                    <img src="../images/Empire_Finance_Network_logos_4/Empire_Finance_Network-logos_transparent_purple_resized.png">
+                    <img src="../../images/Empire_Finance_Network_logos_4/Empire_Finance_Network-logos_transparent_vintage_resized.png">
                 </div>
 
                 <ul>
@@ -51,15 +49,6 @@
                     <li>
                         <a href="#">
                             <span class="icon">
-                                <i class="fa-solid fa-gear"></i>
-                            </span>
-                            <span class="title">Settings</span>
-                        </a>
-                    </li>
-
-                    <li>
-                        <a href="#">
-                            <span class="icon">
                                 <i class="fa-sharp fa-solid fa-screwdriver-wrench"></i>
                             </span>
                             <span class="title">Support</span>
@@ -67,7 +56,7 @@
                     </li>
 
                     <li>
-                        <a href="#">
+                        <a href="../../Login/index.html">
                             <span class="icon">
                                 <i class="fa-solid fa-arrow-right-from-bracket"></i>
                             </span>
@@ -91,19 +80,19 @@
                 <nav>
                     <ul>
                         <li>
-                            <a href="#">
+                            <a href="../dashboards/agencyView.html">
                                 <span>Agency</span>
                             </a>
                         </li>
 
                         <li>
-                            <a href="#">
+                            <a href="../dashboards/accountView.html">
                                 <span>Account</span>
                             </a>
                         </li>
 
                         <li>
-                            <a href="#">
+                            <a href="../dashboards/peopleView.html">
                                 <span>People</span>
                             </a>
                         </li>
@@ -132,6 +121,59 @@
                             Refresh
                         </button>
                     </div>
+                </div>
+
+                <div class="listDashboard">
+                    <div class="listDashboardColumnTitles">
+                        <ul>
+                            <li>
+                                <span>Bank ID</span>
+                            </li>
+                            
+                            <li>
+                                <span>Bank Name</span>
+                            </li>
+
+                            
+                        </ul>
+                    </div>
+                    <ul>
+                        <li>
+                            <div class="listBox">
+                                
+                            </div>
+                        </li>
+
+                        <li>
+                            <div class="listBox">
+
+                            </div>
+                        </li>
+
+                        <li>
+                            <div class="listBox">
+
+                            </div>
+                        </li>
+
+                        <li>
+                            <div class="listBox">
+
+                            </div>
+                        </li>
+
+                        <li>
+                            <div class="listBox">
+
+                            </div>
+                        </li>
+
+                        <li>
+                            <div class="listBox">
+
+                            </div>
+                        </li>
+                    </ul>
                 </div>
             </div>
         </section>
